fix: sidebar is broken on small screen

--- a/www/ui/styles.css
+++ b/www/ui/styles.css
@@ -449,6 +449,7 @@
             }
 
             width: 100%;
+            resize: none;
         }
     }
 
@@ -486,6 +487,7 @@
         padding: 0;
 
         @container body (width < 800px) {
+            display: flex;
             grid-column: 1 / -1;
             flex-direction: row;
             min-width: fit-content;
